# AI-Intelligence-Hub

./: .dockerignore  .env.example  Dockerfile  Dockerfile.torchserve  Makefile  buf.gen.yaml  buf.yaml  docker-compose.yml  pyproject.toml
ai_intelligence_hub/: __init__.py
ai_intelligence_hub/domain/: __init__.py  entities.py  errors.py
ai_intelligence_hub/gateway/: __init__.py  protocols.py
ai_intelligence_hub/repositories/: __init__.py  protocols.py
protos/: intelligence_hub.proto
