[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-intelligence-hub"
version = "0.1.0"
description = "AI Intelligence Hub - Account Summarization, RAG Chatbot, and Ticket Triage service"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name  = "Customer Intelligence Hub" },
]
dependencies = [
    "fastapi>=0.110.0",
    "grpcio>=1.62.0",
    "grpcio-tools>=1.62.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.2.5",
    "redis>=5.0.0",
    "aiokafka>=0.10.0",
    "pydantic-settings>=2.2.0",
    "structlog>=24.1.0",
    "opentelemetry-api>=1.23.0",
    "circuitbreaker>=2.0.0",
    "tenacity>=8.2.0",
    "httpx>=0.27.0",
    "uvicorn>=0.29.0",
    "boto3>=1.34.0",
    "protobuf>=4.25.0",
    "alembic>=1.13.0",
    "sqlalchemy>=2.0.0",
]


[project.optional-dependencies]
dev = [
    "hypothesis>=6.98.0",
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "httpx>=0.27.0",
    "testcontainers>=3.7.0",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "property: property-based tests (run with hypothesis)",
    "unit: unit tests",
    "integration: integration tests requiring external services",
    "contract: gRPC contract tests",
    "security: security regression tests",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.coverage.run]
source = ["ai-intelligence-hub"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80